# Lamp-Shade-Project

./: CMakeLists.txt  README.md  voxelized16.txt
include/: CompFab.h  Wall.h
input/hollow sphere/: hollow sphere.scad  hollow sphere.stl
lamp_source/: Mesh.cpp  Wall.cpp  lampshade.cpp
samibuild/: CMakeCache.txt  Makefile  cmake_install.cmake  voxelizer
source/: main.cpp
vox_params/: elephant128.txt  elephant64.txt  sphere32.txt  voxelized128.txt  voxelized16.txt  voxelized64.txt
vox_source/: voxelizer.cpp
